// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EstimationArea renders correctly with actual values and current period 1`] = `
<div class="estimation-container">
  <div class="estimation-container__header">
    <p class="estimation-container__header__title">Info &amp; Estimation, <span class="estimation-container__header__period">Feb 2020</span></p>
    <div class="estimation-container__header__selection-area"><button name="Select Current Period" type="button" class="estimation-container__header__selection-area__item active">
        <p class="estimation-container__header__selection-area__item__label long-text">
          Current Period
        </p>
        <p class="estimation-container__header__selection-area__item__label short-text">
          Current Per.
        </p>
      </button>
      <estimationperioddropdown-stub class="estimation-container__header__selection-area__item"></estimationperioddropdown-stub>
    </div>
  </div>
  <div class="estimation-container__divider"></div>
  <div class="estimation-table-container">
    <div class="estimation-table-container__labels-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__labels-area__text">Name</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__labels-area__text">Type</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__labels-area__text">Disk</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__labels-area__text">Bandwidth</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__labels-area__text">Payout</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Download</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">100MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$2000000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Repair &amp; Audit</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">300MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$4000000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Disk Average Month</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Storage</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">500MBm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$6000000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Gross Total</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4"></div>
      <div class="column justify-start column-5"></div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$17000000.00</p>
      </div>
    </div>
    <!---->
    <div class="estimation-table-container__held-area">
      <p class="estimation-table-container__held-area__text">Held Back</p>
      <p class="estimation-table-container__held-area__text">-$9000000.00</p>
    </div>
    <!---->
    <div class="estimation-table-container__net-total-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__net-total-area__text">NET TOTAL</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__net-total-area__text">500MBm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__net-total-area__text">400MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__net-total-area__text">$8000000.00</p>
      </div>
    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;

exports[`EstimationArea renders correctly with actual values and current period and not first day on month 1`] = `
<div class="estimation-container">
  <div class="estimation-container__header">
    <p class="estimation-container__header__title">Info &amp; Estimation, <span class="estimation-container__header__period">Feb 2020</span></p>
    <div class="estimation-container__header__selection-area"><button name="Select Current Period" type="button" class="estimation-container__header__selection-area__item active">
        <p class="estimation-container__header__selection-area__item__label long-text">
          Current Period
        </p>
        <p class="estimation-container__header__selection-area__item__label short-text">
          Current Per.
        </p>
      </button>
      <estimationperioddropdown-stub class="estimation-container__header__selection-area__item"></estimationperioddropdown-stub>
    </div>
  </div>
  <div class="estimation-container__divider"></div>
  <div class="estimation-table-container">
    <div class="estimation-table-container__labels-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__labels-area__text">Name</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__labels-area__text">Type</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__labels-area__text">Disk</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__labels-area__text">Bandwidth</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__labels-area__text">Payout</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Download</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">10MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$200000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Repair &amp; Audit</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">30MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$400000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Disk Average Month</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Storage</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">50MBm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$600000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Gross Total</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4"></div>
      <div class="column justify-start column-5"></div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$1700000.00</p>
      </div>
    </div>
    <!---->
    <div class="estimation-table-container__held-area">
      <p class="estimation-table-container__held-area__text">Held Back</p>
      <p class="estimation-table-container__held-area__text">-$900000.00</p>
    </div>
    <!---->
    <div class="estimation-table-container__net-total-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__net-total-area__text">NET TOTAL</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__net-total-area__text">50MBm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__net-total-area__text">40MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__net-total-area__text">$800000.00</p>
      </div>
    </div>
    <!---->
  </div>
  <div class="estimation-container__payout-area">
    <div class="estimation-container__payout-area__left-area">
      <p class="title-text">Estimated Payout</p>
      <p class="additional-text">At the end of the month if the load keeps the same for the rest of the month.</p>
    </div>
    <div class="estimation-container__payout-area__right-area">
      <p class="title-text">$12000000.00</p>
    </div>
  </div>
  <!---->
</div>
`;

exports[`EstimationArea renders correctly with actual values and historical period with paystub 1`] = `
<div class="estimation-container">
  <div class="estimation-container__header">
    <p class="estimation-container__header__title">Info &amp; Estimation, <span class="estimation-container__header__period">Jan 2020</span></p>
    <div class="estimation-container__header__selection-area"><button name="Select Current Period" type="button" class="estimation-container__header__selection-area__item">
        <p class="estimation-container__header__selection-area__item__label long-text">
          Current Period
        </p>
        <p class="estimation-container__header__selection-area__item__label short-text">
          Current Per.
        </p>
      </button>
      <estimationperioddropdown-stub class="estimation-container__header__selection-area__item active"></estimationperioddropdown-stub>
    </div>
  </div>
  <div class="estimation-container__divider"></div>
  <div class="estimation-table-container">
    <div class="estimation-table-container__labels-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__labels-area__text">Name</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__labels-area__text">Type</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__labels-area__text">Disk</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__labels-area__text">Bandwidth</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__labels-area__text">Payout</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Download</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">0B</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$0.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Repair &amp; Audit</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">0B</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$0.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Disk Average Month</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Storage</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">0Bm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$0.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Gross Total</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4"></div>
      <div class="column justify-start column-5"></div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$0.44</p>
      </div>
    </div>
    <div class="estimation-table-container__total-area">
      <p class="estimation-table-container__total-area__text">Total + Surge (300%)</p>
      <p class="estimation-table-container__total-area__text">$1.33</p>
    </div>
    <div class="estimation-table-container__held-area">
      <p class="estimation-table-container__held-area__text">Held Back</p>
      <p class="estimation-table-container__held-area__text">-$0.78</p>
    </div>
    <!---->
    <div class="estimation-table-container__net-total-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__net-total-area__text">NET TOTAL</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__net-total-area__text">0Bm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__net-total-area__text">0B</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__net-total-area__text">$0.56</p>
      </div>
    </div>
    <div class="estimation-table-container__distributed-area">
      <div class="estimation-table-container__distributed-area__left-area">
        <p class="estimation-table-container__distributed-area__text">Distributed</p>
        <div class="estimation-table-container__distributed-area__info-area">
          <checksinfoicon-stub alt="Info icon with question mark" class="checks-area-image"></checksinfoicon-stub>
          <div class="tooltip" style="display: none;">
            <div class="tooltip__text-area">
              <p class="tooltip__text-area__text">If you see $0.00 as your distributed amount, you didn’t reach the minimum payout threshold. Your payout will be distributed along with one of the payouts in the upcoming payout cycles. If you see a distributed amount higher than expected, it means this month you were paid undistributed payouts from previous months in addition to this month’s payout.</p>
            </div>
            <div class="tooltip__footer"></div>
          </div>
        </div>
      </div>
      <p class="estimation-table-container__distributed-area__text">$0.33</p>
    </div>
  </div>
  <!---->
  <!---->
</div>
`;

exports[`EstimationArea renders correctly with actual values and historical period without paystub 1`] = `
<div class="estimation-container">
  <div class="estimation-container__header">
    <p class="estimation-container__header__title">Info &amp; Estimation, <span class="estimation-container__header__period">Jan 2020</span></p>
    <div class="estimation-container__header__selection-area"><button name="Select Current Period" type="button" class="estimation-container__header__selection-area__item">
        <p class="estimation-container__header__selection-area__item__label long-text">
          Current Period
        </p>
        <p class="estimation-container__header__selection-area__item__label short-text">
          Current Per.
        </p>
      </button>
      <estimationperioddropdown-stub class="estimation-container__header__selection-area__item active"></estimationperioddropdown-stub>
    </div>
  </div>
  <div class="estimation-container__divider"></div>
  <!---->
  <!---->
  <div class="no-data-container"><img src="@/../static/images/payments/NoData.png" class="no-data-container__image">
    <p class="no-data-container__title">No data to display</p>
    <p class="no-data-container__additional-text">Please note, historical data about payouts does not update immediately, it may take some time.</p>
  </div>
</div>
`;

exports[`EstimationArea renders correctly with actual values and previous period without paystub 1`] = `
<div class="estimation-container">
  <div class="estimation-container__header">
    <p class="estimation-container__header__title">Info &amp; Estimation, <span class="estimation-container__header__period">Jan 2020</span></p>
    <div class="estimation-container__header__selection-area"><button name="Select Current Period" type="button" class="estimation-container__header__selection-area__item">
        <p class="estimation-container__header__selection-area__item__label long-text">
          Current Period
        </p>
        <p class="estimation-container__header__selection-area__item__label short-text">
          Current Per.
        </p>
      </button>
      <estimationperioddropdown-stub class="estimation-container__header__selection-area__item active"></estimationperioddropdown-stub>
    </div>
  </div>
  <div class="estimation-container__divider"></div>
  <div class="estimation-table-container">
    <div class="estimation-table-container__labels-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__labels-area__text">Name</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__labels-area__text">Type</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__labels-area__text">Disk</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__labels-area__text">Bandwidth</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__labels-area__text">Payout</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Download</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">100MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$2000000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Repair &amp; Audit</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Egress</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">300MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$4000000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Disk Average Month</p>
      </div>
      <div class="column justify-start column-2">
        <p class="estimation-table-container__info-area__text">Storage</p>
      </div>
      <div class="column justify-start column-3">
        <!---->
      </div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__info-area__text">500MBm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__info-area__text">--</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$6000000.00</p>
      </div>
    </div>
    <div class="estimation-table-container__info-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__info-area__text">Gross Total</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4"></div>
      <div class="column justify-start column-5"></div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__info-area__text">$17000000.00</p>
      </div>
    </div>
    <!---->
    <div class="estimation-table-container__held-area">
      <p class="estimation-table-container__held-area__text">Held Back</p>
      <p class="estimation-table-container__held-area__text">-$9000000.00</p>
    </div>
    <!---->
    <div class="estimation-table-container__net-total-area">
      <div class="column justify-start column-1">
        <p class="estimation-table-container__net-total-area__text">NET TOTAL</p>
      </div>
      <div class="column justify-start column-2"></div>
      <div class="column justify-start column-3"></div>
      <div class="column justify-start column-4">
        <p class="estimation-table-container__net-total-area__text">500MBm</p>
      </div>
      <div class="column justify-start column-5">
        <p class="estimation-table-container__net-total-area__text">400MB</p>
      </div>
      <div class="column justify-end column-6">
        <p class="estimation-table-container__net-total-area__text">$8000000.00</p>
      </div>
    </div>
    <!---->
  </div>
  <!---->
  <!---->
</div>
`;
